# Codexus

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
app/: pubspec.yaml
app/lib/: main.dart
app/lib/app/: codexferry_app.dart
app/lib/ipc/: ipc_client.dart
app/lib/models/: account_summary.dart  active_provider.dart  app_settings.dart  codex_status.dart  poem.dart  pool_snapshot.dart  provider_preset.dart  session_detail.dart  session_record.dart  stats.dart  weather.dart
app/lib/platform/: app_prefs.dart  providers_io.dart  session_exporter.dart  sidecar_controller.dart  tray_controller.dart  user_paths.dart
app/lib/ui/dialogs/: add_account_dialog.dart  edit_account_dialog.dart
app/lib/ui/pages/: home_page.dart  settings_page.dart
app/lib/ui/shell/: app_sidebar.dart
app/lib/ui/theme/: app_theme.dart  theme_controller.dart
app/lib/ui/widgets/: account_card.dart  aurora_background.dart  empty_state.dart  glass_dialog.dart  glass_segmented.dart  glass_surface.dart  metric_card.dart  poem_banner.dart  quota_bar.dart  trend_chart_card.dart  weather_card.dart
app/macos/Runner/Configs/: AppInfo.xcconfig
app/test/: add_account_dialog_test.dart  app_prefs_test.dart  providers_io_test.dart  providers_page_test.dart  session_exporter_test.dart  settings_page_test.dart  widget_test.dart
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
core/: Cargo.toml
core/crates/ferry-auth/: Cargo.toml
core/crates/ferry-auth/src/: callback.rs  jwt.rs  lib.rs  oauth.rs  pkce.rs  store.rs
core/crates/ferry-codexlog/: Cargo.toml
core/crates/ferry-codexlog/src/: lib.rs
core/crates/ferry-config/: Cargo.toml
core/crates/ferry-config/src/: lib.rs
core/crates/ferry-convert/: Cargo.toml
core/crates/ferry-convert/src/: lib.rs  request.rs  response.rs  stream.rs
core/crates/ferry-daemon/: Cargo.toml
core/crates/ferry-daemon/src/: main.rs
core/crates/ferry-ipc/: Cargo.toml
core/crates/ferry-ipc/src/: lib.rs
core/crates/ferry-proxy/: Cargo.toml
core/crates/ferry-proxy/src/: lib.rs  pool.rs  tokenizer.rs
core/crates/ferry-store/: Cargo.toml
core/crates/ferry-store/src/: lib.rs
scripts/: package-macos.sh  package-windows.ps1
