[workspace]
resolver = "2"
members = [
    "crates/ferry-convert",
    "crates/ferry-proxy",
    "crates/ferry-config",
    "crates/ferry-auth",
    "crates/ferry-store",
    "crates/ferry-daemon", "crates/ferry-ipc",
    "crates/ferry-codexlog",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Codexus"]
repository = "https://github.com/MageGojo/Codexus"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
futures = "0.3"
tokio-stream = "0.1"
bytes = "1"
async-stream = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
toml_edit = "0.22"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
rusqlite = { version = "0.40.1", features = ["bundled"] }

[profile.release]
strip = true
lto = "thin"
opt-level = 3
